# notebook

./: .env.dev  .env.prod  .gitignore  Jenkinsfile  README.md  docker-compose.override.yml  docker-compose.root.yml  docker-compose.yml  start.sh
apps/fb/bot/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/fb/bot/src/: config.py  main.py  server.py  utils.py
apps/fb/bot/src/callbacks/: models_factory.py  pagination_factory.py  properties_factory.py
apps/fb/bot/src/handlers/: search_handlers.py  start_handlers.py
apps/fb/bot/src/keyboards/: search_keyboards.py
apps/fb/bot/src/middleware/: auth_middlware.py
apps/gelios/backend/: .env.prod  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
apps/gelios/backend/src/: config.py  database.py  main.py
apps/gelios/backend/src/utils/: errors.py  filter_dict.py  http_errors.py  requests_handler.py
apps/gelios/backend/src/workers/: chain_worker.py  constants.py  countries_data.py  paths.py  server_worker.py
services/admin-api/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
services/admin-api/src/: config.py  main.py  schemas.py  server.py  service.py
services/admin-api/src/keycloak/: OAuth2AuthCodeBearer.py  keycloak_admin_integration.py  keycloak_models.py
services/auth_code_consumer/: Dockerfile  docker-compose.yml  pyproject.toml
services/auth_code_consumer/src/: config.py  main.py  server.py
services/auth_code_consumer/src/auth/: auth_router.py
services/auth_code_consumer/src/database/: init_database.py
services/fb/: .env.tests  .gitignore  Dockerfile  Dockerfile.test  docker-compose.yml  docker-entrypoint-test.sh  docker-entrypoint.sh  pyproject.toml  pytest.ini  run-test.sh
services/fb/src/: config.py  exceptions_handler.py  main.py  server.py
services/fb/src/auth/data/: auth_repository.py  auth_router_api.py  auth_schema.py  auth_utils.py
services/fb/src/auth/models_auth/: models_auth.py
services/fb/src/errors/: errors.py
services/fb/src/files/: file_router.py  file_service.py
services/fb/src/keycloak/: keycloak_integration.py
services/fb/src/models/: models_exceptions_http.py  models_router_api.py  models_router_api_schema.py  models_service.py
services/fb/src/objects/: objects_exceptions_http.py  objects_router_api.py  objects_router_api_schema.py  objects_service.py  objects_service_schema.py
services/fb/src/properties/: properties_exceptions_http.py  properties_router_api.py  properties_router_api_schema.py  properties_service.py
services/fb/src/tokens/: token_repository.py  token_schema.py  token_service.py
services/fb/src/types/: pagination.py  primitive_type_enum.py  response.py
services/fb/src/utils/: csv_creater.py  mongo.py  relative_path.py  types_decoder.py
services/fb/tests/: conftest.py
services/fb/tests/models/: data_models.py  example_file.xlsx  sends_models.py  templates_models.py  test_add_model.py  test_delete_model.py  test_get_example_file_model.py  test_get_model_by_id.py  test_get_model_history.py  test_get_models.py  test_recove_model.py  test_update_model.py  utils_models.py
services/fb/tests/objects/: data_objects.py  sends_objects.py  templates_objects.py  test_add_object.py  test_approve_objects.py  test_decline_objects.py  test_get_all_objects.py  test_get_count_objects.py  test_get_object.py  test_objects_search.py  test_unloading_objects.py  test_upload_file.py  upload_file.xls
services/fb/tests/properties/: data_properties.py  sends_properties.py  templates_properties.py  test_add_property.py  test_delete_property.py  test_get_properties.py  test_get_property_by_id.py  test_get_property_history.py  test_recove_property.py  test_update_property.py
(+302 files in other folders)
