[tool.poetry]
name = "telegrambot"
version = "0.1.0"
description = ""
authors = ["Danil <aleksanov.03@mail.ru>"]
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
python-i18n = {extras = ["yaml"], version = "^0.3.9"}
uvicorn = "^0.29.0"
fastapi = "^0.110.2"
pymongo = "^4.7.0"
returns = "^0.22.0"
python-keycloak = "^3.12.0"
redis = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dev = 'src.server:start'